--- a/css/master.css
+++ b/css/master.css
@@ -1,5 +1,6 @@
 body {
-  background-color: #feddbe;
+  background-color:#e4efe7;
+
 }
 
 img {
@@ -16,7 +17,7 @@ hr {
 }
 
 h1 {
-  color: #4ca1a3;
+  color: #feddbe;
   text-shadow: 2px 2px grey;
 }
 
